Sun Apr 30 16:03:59 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* osconfig.c: Global variables krb5_config_file and
		krb5_trans_file conditionalized on OLD_CONFIG_FILES.

Sat Apr 29 07:07:22 1995  Theodore Y. Ts'o  <tytso@lurch.mit.edu>

	* init_os_ctx.c (krb5_set_config_files): New function.  Provides a
		way to set a new set of config files for a particular OS
		context.

	* init_os_ctx.c (krb5_os_init_context): Don't return an error if 
		profile_init() returns an error.

Fri Apr 28 09:58:31 EDT 1995	Paul Park	(pjpark@mit.edu)

	Move adm_conn.c from libkrb5 to libkadm.

Thu Apr 27 17:50:14 1995 Keith Vetter (keithv@fusion.com)

	* adm_conn.c: added constant to pull in needed PC code, and
	   removed two unused variables.
	* genaddrs.c: needed casts on getsockname and getpeername calls.
	* mk_faddr.c: the int->byte code needed explicit casts.
	* os-proto.h: added missing prototype for krb5_make_fulladdr.

Wed Apr 26 16:00:52 EDT 1995	Paul Park	(pjpark@mit.edu)

	* Add adm_conn.c - module to provide a connection to an administrative
	  (kpasswd/kadmin) server.

Wed Apr 27 11:30:00 1995 Keith Vetter (keithv@fusion.com)

	* osconfig.c: krb5_find_config_files only used for OLD_CONFIG_FILES.
	* init_os_.c: Get config file location via windows ini files.

Thu Apr 27 13:04:54 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* Makefile.in (clean): Remove t_std_conf.o 

Tue Apr 25 21:58:23 1995  Chris Procenzano (proven@mit.edu)

	* Makefile.in : Added source files mk_faddr.c and genaddrs.c.
	* mk_faddr.c (krb5_mk_fulladdr()): Makes a full address from
		a struct sockaddr_in.
	* genaddrs.c (krb5_auth_con_genaddrs()) : Generate a full address
		from the active file descriptor and place it in the 
		auth_context for the calls mk_safe(), mk_priv(), mk_safe(), 
		rd_cred(), rd_priv(), and rd_safe().
	* gen_rname.c (krb5_gen_replay_name()) : Fixed to take any type of
		krb5_address and generate a rcache name.
	* os-proto.h (krb5_make_full_ipaddr()) : Removed prototype.