@@ -35,56 +35,55 @@
 #endif
 
 krb5_error_code
-krb5_make_fulladdr(context, saddr, kaddr)
+krb5_make_fulladdr(context, kaddr, kport, raddr)
     krb5_context 	  context;
-    struct sockaddr_in 	* saddr;
     krb5_address	* kaddr;
+    krb5_address	* kport;
+    krb5_address        * raddr;
 {
-    krb5_int32 smushaddr = (krb5_int32)saddr->sin_addr.s_addr;  /* net order */
-    krb5_int16 smushport = (krb5_int16)saddr->sin_port; 	/* ditto */
     register krb5_octet * marshal;
     krb5_int32 tmp32;
     krb5_int16 tmp16;
 
-    kaddr->addrtype = ADDRTYPE_ADDRPORT;
-    kaddr->length = sizeof(saddr->sin_addr) + sizeof(saddr->sin_port) +
-		    (4 * sizeof(krb5_int32));
+    if ((kport == NULL) || (kport == NULL)) 
+	return EINVAL;
 
-    if (!(kaddr->contents = (krb5_octet *)malloc(kaddr->length)))
+    raddr->length = kaddr->length + kport->length + (4 * sizeof(krb5_int32));
+    if (!(raddr->contents = (krb5_octet *)malloc(kaddr->length)))
 	return ENOMEM;
 
-    marshal = kaddr->contents;
+    raddr->addrtype = ADDRTYPE_ADDRPORT;
+    marshal = raddr->contents;
 
-    tmp16 = ADDRTYPE_INET;
+    tmp16 = kaddr->addrtype;
     *marshal++ = 0x00;
     *marshal++ = 0x00;
     *marshal++ = (krb5_octet) (tmp16 & 0xff);
     *marshal++ = (krb5_octet) ((tmp16 >> 8) & 0xff);
 
-    tmp32 = sizeof(smushaddr);
+    tmp32 = kaddr->length;
     *marshal++ = (krb5_octet) (tmp32 & 0xff);
     *marshal++ = (krb5_octet) ((tmp32 >> 8) & 0xff);
     *marshal++ = (krb5_octet) ((tmp32 >> 16) & 0xff);
     *marshal++ = (krb5_octet) ((tmp32 >> 24) & 0xff);
 
-    (void) memcpy((char *)marshal, (char *)&smushaddr, sizeof(smushaddr));
-    marshal += sizeof(smushaddr);
+    (void) memcpy((char *)marshal, (char *)(kaddr->contents), kaddr->length);
+    marshal += kaddr->length;
 
-    tmp16 = ADDRTYPE_IPPORT;
+    tmp16 = kport->addrtype;
     *marshal++ = 0x00;
     *marshal++ = 0x00;
     *marshal++ = (krb5_octet) (tmp16 & 0xff);
     *marshal++ = (krb5_octet) ((tmp16 >> 8) & 0xff);
 
-    tmp32 = sizeof(smushport);
+    tmp32 = kport->length;
     *marshal++ = (krb5_octet) (tmp32 & 0xff);
     *marshal++ = (krb5_octet) ((tmp32 >> 8) & 0xff);
     *marshal++ = (krb5_octet) ((tmp32 >> 16) & 0xff);
     *marshal++ = (krb5_octet) ((tmp32 >> 24) & 0xff);
 
-    (void) memcpy((char *)marshal, (char *)&smushport, sizeof(smushport));
-    marshal += sizeof(smushport);
-
+    (void) memcpy((char *)marshal, (char *)(kport->contents), kport->length);
+    marshal += kport->length;
     return 0;
 }
 #endif
